<resources>
    <string name="app_name">E-Commerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_welcome_msg">Welcome to E-Commerce</string>
    <string name="sign_in_msg">Sign in to continue</string>
    <string name="email_edt_hint">Your Email</string>
    <string name="password_edt_hint">Your Password</string>
    <string name="btn_login">Sign In</string>
    <string name="or">OR</string>
    <string name="btn_google">Login with Google</string>
    <string name="btn_facebook">Login with facebook</string>
    <string name="btn_forgetPassword">Forgot Password?</string>
    <string name="have_a_account_msg">Don’t have a account?</string>
    <string name="register">Register</string>
    <string name="loading">Loading\n</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="google_sign_in_failed_msg">"Google sign in failed, please retry again later. "</string>
    <string name="generic_error_msg">Error Please tray again later.</string>
    <string name="facebook_app_id">996344138959108</string>
    <string name="fb_login_protocol_scheme">fb996344138959108</string>
    <string name="facebook_client_token">91f40b5adcfeeb029643c2df6d442ac3</string>


</resources>